frontdoor-elam.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontdoor-elam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontdoor-elam
  template:
    metadata:
      labels:
        app: frontdoor-elam
    spec:
      containers:
      - name: frontdoor-elam
        image: frontdoor-elam:v1
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: frontdoor-elam-svc
spec:
  type: NodePort
  ports:
  - port: 8443
    targetPort: 8000
    protocol: TCP
    NodePort: 32348
  selector:
    app: frontdoor-elam
