ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontdoor-ingress
spec:
  rules:
  - host: frontdoor.elam.sh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontdoor-elam-svc
            port: 
              number: 8443
